wip3 🧹 update MWE in jupyter update mwe jupyter again, add more comments improve docs

--- a/minimal_working_example.ipynb
+++ b/minimal_working_example.ipynb
@@ -10,6 +10,7 @@
     "# omit this import and apply in the real code\n",
     "import nest_asyncio\n",
     "\n",
+    "from ahbicht.content_evaluation import fc_evaluators\n",
     "from ahbicht.mapping_results import PackageKeyConditionExpressionMapping\n",
     "\n",
     "nest_asyncio.apply()  # can be omitted outside jupyter"
@@ -29,12 +30,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tree(Token('RULE', 'ahb_expression'), [Tree('single_requirement_indicator_expression', [Token('MODAL_MARK', 'Muss'), Tree('and_composition', [Tree('and_composition', [Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '2')]), Tree('then_also_composition', [Tree('and_composition', [Tree('or_composition', [Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '3')]), Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '4')])]), Tree(Token('RULE', 'package'), [Token('PACKAGE_KEY', '123P')])]), Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '901')])])]), Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '555')])])])])\n"
+      "Tree(Token('RULE', 'ahb_expression'), [Tree('single_requirement_indicator_expression', [Token('MODAL_MARK', 'Muss'), Tree('and_composition', [Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '2')]), Tree('and_composition', [Tree('then_also_composition', [Tree('and_composition', [Tree('or_composition', [Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '3')]), Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '4')])]), Tree(Token('RULE', 'package'), [Token('PACKAGE_KEY', '123P')])]), Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '901')])]), Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '555')])])])])])\n"
      ]
     },
     {
      "data": {
-      "text/plain": "{'type': 'ahb_expression',\n 'children': [{'tree': {'type': 'single_requirement_indicator_expression',\n    'children': [{'tree': None,\n      'token': {'value': 'Muss', 'type': 'MODAL_MARK'}},\n     {'tree': {'type': 'and_composition',\n       'children': [{'tree': {'type': 'and_composition',\n          'children': [{'tree': {'type': 'condition',\n             'children': [{'tree': None,\n               'token': {'value': '2', 'type': 'CONDITION_KEY'}}]},\n            'token': None},\n           {'tree': {'type': 'then_also_composition',\n             'children': [{'tree': {'type': 'and_composition',\n                'children': [{'tree': {'type': 'or_composition',\n                   'children': [{'tree': {'type': 'condition',\n                      'children': [{'tree': None,\n                        'token': {'value': '3', 'type': 'CONDITION_KEY'}}]},\n                     'token': None},\n                    {'tree': {'type': 'condition',\n                      'children': [{'tree': None,\n                        'token': {'value': '4', 'type': 'CONDITION_KEY'}}]},\n                     'token': None}]},\n                  'token': None},\n                 {'tree': {'type': 'package',\n                   'children': [{'tree': None,\n                     'token': {'value': '123P', 'type': 'PACKAGE_KEY'}}]},\n                  'token': None}]},\n               'token': None},\n              {'tree': {'type': 'condition',\n                'children': [{'tree': None,\n                  'token': {'value': '901', 'type': 'CONDITION_KEY'}}]},\n               'token': None}]},\n            'token': None}]},\n         'token': None},\n        {'tree': {'type': 'condition',\n          'children': [{'tree': None,\n            'token': {'value': '555', 'type': 'CONDITION_KEY'}}]},\n         'token': None}]},\n      'token': None}]},\n   'token': None}]}"
+      "text/plain": "{'children': [{'tree': {'children': [{'tree': None,\n      'token': {'value': 'Muss', 'type': 'MODAL_MARK'}},\n     {'tree': {'children': [{'tree': {'children': [{'tree': None,\n            'token': {'value': '2', 'type': 'CONDITION_KEY'}}],\n          'type': 'condition'},\n         'token': None},\n        {'tree': {'children': [{'tree': {'children': [{'tree': {'children': [{'tree': {'children': [{'tree': {'children': [{'tree': None,\n                        'token': {'value': '3', 'type': 'CONDITION_KEY'}}],\n                      'type': 'condition'},\n                     'token': None},\n                    {'tree': {'children': [{'tree': None,\n                        'token': {'value': '4', 'type': 'CONDITION_KEY'}}],\n                      'type': 'condition'},\n                     'token': None}],\n                   'type': 'or_composition'},\n                  'token': None},\n                 {'tree': {'children': [{'tree': None,\n                     'token': {'value': '123P', 'type': 'PACKAGE_KEY'}}],\n                   'type': 'package'},\n                  'token': None}],\n                'type': 'and_composition'},\n               'token': None},\n              {'tree': {'children': [{'tree': None,\n                  'token': {'value': '901', 'type': 'CONDITION_KEY'}}],\n                'type': 'condition'},\n               'token': None}],\n             'type': 'then_also_composition'},\n            'token': None},\n           {'tree': {'children': [{'tree': None,\n               'token': {'value': '555', 'type': 'CONDITION_KEY'}}],\n             'type': 'condition'},\n            'token': None}],\n          'type': 'and_composition'},\n         'token': None}],\n       'type': 'and_composition'},\n      'token': None}],\n    'type': 'single_requirement_indicator_expression'},\n   'token': None}],\n 'type': 'ahb_expression'}"
      },
      "execution_count": 2,
      "metadata": {},
@@ -68,7 +69,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "{'ahb_expression': [{'single_requirement_indicator_expression': ['Muss',\n    {'and_composition': [{'and_composition': ['2',\n        {'then_also_composition': [{'and_composition': [{'or_composition': ['3',\n              '4']},\n            '123P']},\n          '901']}]},\n      '555']}]}]}"
+      "text/plain": "{'ahb_expression': [{'single_requirement_indicator_expression': ['Muss',\n    {'and_composition': ['2',\n      {'and_composition': [{'then_also_composition': [{'and_composition': [{'or_composition': ['3',\n              '4']},\n            '123P']},\n          '901']},\n        '555']}]}]}]}"
      },
      "execution_count": 3,
      "metadata": {},
@@ -196,7 +197,9 @@
     "        The result is always an EvaluatedFormatConstraint.\n",
     "        \"\"\"\n",
     "        # insert your own logic here\n",
-    "        if entered_input[\"data\"].lower() == entered_input[\"data\"]:\n",
+    "        if not entered_input:\n",
+    "            return EvaluatedFormatConstraint(False, f\"The input is empty but expected lower case.\")\n",
+    "        if entered_input.lower() == entered_input:\n",
     "            return EvaluatedFormatConstraint(True, None)\n",
     "        return EvaluatedFormatConstraint(\n",
     "            False, f\"The input '{entered_input['data']}' does not obey format constraint 901.\"\n",
@@ -275,7 +278,6 @@
     "    \"2\": ConditionFulfilledValue.FULFILLED,\n",
     "    \"3\": ConditionFulfilledValue.UNFULFILLED,\n",
     "    \"4\": ConditionFulfilledValue.FULFILLED,\n",
-    "    \"data\": \"some lower case stuff which will be checked in 901\",\n",
     "}\n",
     "\n",
     "my_evaluatable_data = EvaluatableData(\n",
@@ -331,8 +333,16 @@
     "\n",
     "# But later on we can provide AHBicht with the content evaluation results ...\n",
     "# Providing the content evaluation results to find out, if a line in the AHB is actually required,\n",
-    "# is called expression evaluation\n",
-    "expression_evaluation_result = await evaluate_ahb_expression_tree(tree, entered_input=hardcoded_content_evaluations)"
+    "# is called expression evaluation.\n",
+    "\n",
+    "# If there's any text or user input associated with the field whose expression/tree we evaluated,\n",
+    "# then we can set a context variable that will be used to e.g. evaluate a format constraint.\n",
+    "# This is relevant if you use AHBicht for validation (does my edifact message obey the AHB?).\n",
+    "# If you use the MAUS data model to model the AHB and message data, this will be set under the hood.\n",
+    "fc_evaluators.text_to_be_evaluated_by_format_constraint.set(\"it's all lower case. should be fine for 901\")\n",
+    "# Now the context variable is set and ready to be used by the FC evaluator.\n",
+    "\n",
+    "expression_evaluation_result = await evaluate_ahb_expression_tree(tree)"
    ],
    "metadata": {
     "collapsed": false,
@@ -414,7 +424,7 @@
     "    edifact_format=EdifactFormat.UTILMD,\n",
     "    edifact_format_version=EdifactFormatVersion.FV2104,\n",
     ")  # this does all the magic, no need to manually define classes\n",
-    "evaluated = await evaluate_ahb_expression_tree(tree, entered_input=\"\")\n",
+    "evaluated = await evaluate_ahb_expression_tree(tree)\n",
     "print(evaluated)"
    ],
    "metadata": {
@@ -482,7 +492,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(ContentEvaluationResult(hints={'555': 'Hinweis 555'}, format_constraints={'901': EvaluatedFormatConstraint(format_constraint_fulfilled=True, error_message=None)}, requirement_constraints={'2': <ConditionFulfilledValue.FULFILLED: 'FULFILLED'>, '3': <ConditionFulfilledValue.FULFILLED: 'FULFILLED'>, '4': <ConditionFulfilledValue.FULFILLED: 'FULFILLED'>}, packages={}, id=None), AhbExpressionEvaluationResult(requirement_indicator=<ModalMark.MUSS: 'MUSS'>, requirement_constraint_evaluation_result=RequirementConstraintEvaluationResult(requirement_constraints_fulfilled=True, requirement_is_conditional=True, format_constraints_expression='[901]', hints='Hinweis 555'), format_constraint_evaluation_result=FormatConstraintEvaluationResult(format_constraints_fulfilled=True, error_message=None))), (ContentEvaluationResult(hints={'555': 'Hinweis 555'}, format_constraints={'901': EvaluatedFormatConstraint(format_constraint_fulfilled=True, error_message=None)}, requirement_constraints={'2': <ConditionFulfilledValue.FULFILLED: 'FULFILLED'>, '3': <ConditionFulfilledValue.FULFILLED: 'FULFILLED'>, '4': <ConditionFulfilledValue.UNFULFILLED: 'UNFULFILLED'>}, packages={}, id=None), AhbExpressionEvaluationResult(requirement_indicator=<ModalMark.MUSS: 'MUSS'>, requirement_constraint_evaluation_result=RequirementConstraintEvaluationResult(requirement_constraints_fulfilled=True, requirement_is_conditional=True, format_constraints_expression='[901]', hints='Hinweis 555'), format_constraint_evaluation_result=FormatConstraintEvaluationResult(format_constraints_fulfilled=True, error_message=None)))]\n"
+      "[(ContentEvaluationResult(hints={'555': 'Hinweis 555'}, format_constraints={'901': EvaluatedFormatConstraint(format_constraint_fulfilled=True, error_message=None)}, requirement_constraints={'2': <ConditionFulfilledValue.FULFILLED: 'FULFILLED'>, '3': <ConditionFulfilledValue.FULFILLED: 'FULFILLED'>, '4': <ConditionFulfilledValue.FULFILLED: 'FULFILLED'>}, packages={}, id=None), AhbExpressionEvaluationResult(requirement_indicator=<ModalMark.MUSS: 'MUSS'>, requirement_constraint_evaluation_result=RequirementConstraintEvaluationResult(requirement_constraints_fulfilled=True, requirement_is_conditional=True, format_constraints_expression='[901]', hints='foo'), format_constraint_evaluation_result=FormatConstraintEvaluationResult(format_constraints_fulfilled=True, error_message=None))), (ContentEvaluationResult(hints={'555': 'Hinweis 555'}, format_constraints={'901': EvaluatedFormatConstraint(format_constraint_fulfilled=True, error_message=None)}, requirement_constraints={'2': <ConditionFulfilledValue.FULFILLED: 'FULFILLED'>, '3': <ConditionFulfilledValue.FULFILLED: 'FULFILLED'>, '4': <ConditionFulfilledValue.UNFULFILLED: 'UNFULFILLED'>}, packages={}, id=None), AhbExpressionEvaluationResult(requirement_indicator=<ModalMark.MUSS: 'MUSS'>, requirement_constraint_evaluation_result=RequirementConstraintEvaluationResult(requirement_constraints_fulfilled=True, requirement_is_conditional=True, format_constraints_expression='[901]', hints='foo'), format_constraint_evaluation_result=FormatConstraintEvaluationResult(format_constraints_fulfilled=True, error_message=None)))]\n"
      ]
     }
    ],
@@ -497,10 +507,7 @@
     "    )\n",
     "    try:\n",
     "        expression_evaluation_result = await evaluate_ahb_expression_tree(\n",
-    "            await parse_expression_including_unresolved_subexpressions(\n",
-    "                expression=\"Muss [2] U ([3] O [4])[901] U [555]\"\n",
-    "            ),\n",
-    "            entered_input=\"\",\n",
+    "            await parse_expression_including_unresolved_subexpressions(expression=\"Muss [2] U ([3] O [4])[901] U [555]\")\n",
     "        )\n",
     "    except NotImplementedError:\n",
     "        # there are cases that don't make any sense and won't occur out in the wild. These are mostly related to neutral elements where no neutral elements are expected. We can just ignore them\n",
